# llm-variant-interpreter

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt  verify_setup.py
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
golden_genes_figures/: COPY_COMMANDS.sh  FIGURE_GUIDE.md
references/: oncogene_list.json
scripts/: clinvar_enricher.py  generate_report.py  interpret_variants.py  run_interpreter.py  vcf_parser.py
skills/variant-interpreter/: SKILL.md
spheroid_figures/: PRESENTATION_GUIDE.md  QUICK_REFERENCE_CARD.txt  README.md
test_data/: enriched.json  interpretations.json  report.html  test_variants.vcf  variants.json
