[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-variant-interpreter"
version = "1.0.0"
description = "AI-powered clinical interpretation of genomic variants using Claude"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "TARVIA-lab", email = "o.lujano13@gmail.com"}
]
keywords = ["genomics", "variants", "claude", "oncology", "precision-medicine", "vcf", "clinvar"]

dependencies = [
    "anthropic>=0.24.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/TARVIA-lab/llm-variant-interpreter"
Repository = "https://github.com/TARVIA-lab/llm-variant-interpreter.git"

[tool.setuptools.packages.find]
where = ["src"]
